<resources>
    <string name="app_name">Trip Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_out">Sign out successful!</string>

    <!-- Categories -->
    <string name="category">Expense category</string>
    <string name="accommodation">Accommodation</string>
    <string name="airfare">Airfare</string>
    <string name="boat">Boat</string>
    <string name="bus">Bus</string>
    <string name="fuel">Fuel</string>
    <string name="gifts">Gifts</string>
    <string name="meal">Meal</string>
    <string name="other">Other expense</string>
    <string name="other_transport">Other transport</string>
    <string name="public_transport">Public transportation</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="shopping">Shopping</string>
    <string name="train">Train</string>
    <string name="travel_insurance">Travel insurance</string>

    <string name="check_in_time">Check-in time</string>
    <string name="pick_up_time">Pick-up time</string>
    <string name="pick_up_date">Pick-up date</string>
    <string name="confirmation_number">"Confirmation #: "</string>
    <string name="check_out_time">Check-out time</string>
    <string name="drop_off_time">Drop-off time</string>
    <string name="action_add">action_add</string>
    <string name="add_trip">Add trip</string>
    <string name="budget_of_the_trip">Budget of the trip</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="trip_name">Trip name: </string>
    <string name="adding_new_plan">Adding new plan</string>
    <string name="company">Company provider</string>
    <string name="dep_point">Departure point</string>
    <string name="arr_point">Arrival point</string>
    <string name="dep_date">Departure date</string>
    <string name="arr_date">Arrival date</string>
    <string name="dep_time">Departure time</string>
    <string name="arr_time">Arrival time</string>
    <string name="transportation">Transportation</string>
    <string name="hotel_address">Hotel address</string>
    <string name="check_out">Check-out information</string>
    <string name="check_in_date">Check-in date</string>
    <string name="check_out_date">Check-out</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="drop_off_location">Drop off location</string>
    <string name="drop_off_date">Drop off date</string>
    <string name="hotel_name">Hotel name</string>
    <string name="currency">Currency</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="cash">Cash</string>
    <string name="cc">Credit card</string>

    <!-- User interaction -->
    <string name="delete_trip_question">Do you want to delete this trip?</string>
    <string name="delete_event_question">Do you want to delete this event?</string>
    <string name="delete_expence_question">Do you want to delete this expense?</string>
    <string name="deleting_trip">Deleting trip to: </string>
    <string name="deleting_event">Deleting event: </string>
    <string name="deleting_expense">Deleting expense: </string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="info_no_trips_to_show">You don`t have any upcoming trip. Add first one!</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="info_no_events_to_show">There is no events or expenses added to this trip.</string>
    <string name="add_new_event">Add new</string>
    <string name="trips">Trips</string>
    <string name="starting_on">"Starting on: "</string>
    <string name="trip_deleted">Trip deleted!</string>
    <string name="event_deleted">Event deleted!</string>
    <string name="successfully_saved_trip">Trip successfully saved!</string>
    <string name="fail_saving_trip">Failed to save the trip!</string>
    <string name="date_picker">Date picker</string>
    <string name="successfully_saved_expense">Expense was successfully saved!</string>
    <string name="valid_date">Please select valid date</string>
    <string name="valid_time">Please select valid time</string>
    <string name="no_empty_date">Date cannot be empty</string>
    <string name="no_empty_time">Time cannot be empty</string>
    <string name="valid_arrival_point">Please provide a valid arrival point.</string>
    <string name="valid_departure_point">Please provide a valid departure point</string>
    <string name="provide_location">Please provide location</string>
    <string name="provide_provider">Please provide name of provider</string>
    <string name="select_currency">PLease select currency</string>
    <string name="select_payment_method">Please select payment method</string>
    <string name="provide_amount">Please provide amount of expense</string>
    <string name="provide_title">Please provide title</string>
    <string name="to_">"to: "</string>
    <string name="expense">Expense</string>

    <string-array name="payment_methods">
        <item>Cash</item>
        <item>Credit card</item>
        <item>Bank transfer</item>
    </string-array>

    <string-array name="tr_categories">
        <item>Airfare</item>
        <item>Boat</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Other transport</item>
    </string-array>

    <string-array name="exp_categories">
        <item>Fuel</item>
        <item>Gifts</item>
        <item>Meal</item>
        <item>Shopping</item>
        <item>Travel insurance</item>
        <item>Public transportation</item>
        <item>Other expense</item>
    </string-array>

    <string-array name="currencies">
        <item>Albanian lek, ALL</item>
        <item>Europe, EUR</item>
        <item>Belorussian ruble, BYR</item>
        <item>Bosnia and Herzegovina-mark, BAM</item>
        <item>Bulgarian lev, BGN</item>
        <item>Croatian krona, HRK</item>
        <item>Czech koruna, CZK</item>
        <item>Danish krone, DKK</item>
        <item>Georgian lari, GEL</item>
        <item>Hungarian forint, HUF</item>
        <item>Icelandic krona, ISK</item>
        <item>Macedonian dinar, MKD</item>
        <item>Norwegian krone, NOK</item>
        <item>Polish zloty, PLN</item>
        <item>Serbian dinar, RSD</item>
        <item>Swedish krona, SEK</item>
        <item>Swiss franc, CHF</item>
        <item>Turkish lira, TRY</item>
        <item>Ukrainian hryvnia, UAH</item>
        <item>Pound sterling, GBP</item>
    </string-array>

</resources>
