<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:id="@+id/firstName"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_name"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:id="@+id/lastName"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_username"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_password"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/repeat_password"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_repeat_password"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_reg_register"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btn_back_to_login"
        android:layout_gravity="center_horizontal" />
</LinearLayout>